--- a/app/views/pages/editor_partials/_start_content.html.erb
+++ b/app/views/pages/editor_partials/_start_content.html.erb
@@ -11,5 +11,5 @@
     <li>You will be able to view all writers and accept submitted profiles.</li>
   </ul>
 
-  <p>Make sure you've read through all the onboarding materials (also found on your editor dashboard) before reviewing any articles or submitted pitches. Please also join the discord <a href="https://discord.gg/6qjaN6zMjk">here</a> and update your role in the welcome channel to "Editor". This is important to join the right channels.</p>
+  <p>Make sure you've read through all the onboarding materials (also found on your editor dashboard) before reviewing any additional articles or submitted pitches. Please also join the discord <a href="https://discord.gg/6qjaN6zMjk">here</a> and update your role in the welcome channel to "Editor". This is important to join the right channels.</p>
 </div>
