--- a/app/views/pages/images.html.erb
+++ b/app/views/pages/images.html.erb
@@ -1,103 +1,82 @@
 <div class="skinny_wrapper theimages">
   <h1 id="page_title">Image Policy</h1>
+  <div class="alert alert-warning" role="alert">
+    <p class="m-0">
+    Due to an ongoing copyright issue, our image policy is now much stricter. 
+    Published articles that <b>have not accepted our image policy</b> have had their images/thumbnails hidden.</p>
+    <p class="m-0">To show the hidden images:</p>
+    <ol>
+      <li>Cite the images in accordance with the new image policy below (or delete/replace the images).</li>
+      <li>Accept the image policy on your article's edit page to show the images.</li>
+    </ol>
+    <p class="m-0">Articles published from May, 2023 to August 2023, that have accepted the <b>old image policy</b>, have until <b>October 31, 2023</b> to comply with the <b>new image policy</b> to avoid their images being hidden or deleted.</p>
+  </div>
   <h3><b>Image Usage Policy</b></h3>
-  <p>As a writer for our platform, you are responsible for ensuring that any images used in your content comply with applicable copyright laws and are used in accordance with our policies. Failure to follow this policy may result in liability on your part, including legal consequences.
+  <p>As a writer for our platform, you are responsible for ensuring that any images used in your content comply with applicable copyright laws and are used in accordance with our policies. Failure to follow this policy will result in your immediate removal from The Teen Magazine's platform.
   </p>
   <ul>
     <li>
-      Image Attribution: When using images in your content, you must provide proper attribution, giving credit to the original creator or source of the image as required by the relevant licensing terms. This includes providing the name of the owner and a link to the original source, if applicable.
+      <b class="text-decoration-underline">Image Attribution on every image</b>: When using images in your content and thumbnail, you must <b>always</b> provide proper attribution, giving credit to the original creator or source of the image as required by the relevant licensing terms. 
+      <span style="background-color: #FCD04D">Use a link back to the original image (if possible) and include the name of the copyright owner (see example)</span>.
+    </li>
+    
+    <h3 class="mt-3">Format for citing articles that you have uploaded to The Teen Magazine server:</h3>
+    
+    <p style="font-size: 16px"><img alt="" src="https://www.theteenmagazine.com/rails/active_storage/representations/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBektQQVE9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--4ecc3fe35ff1203ef1e67ad14b98c594806057de/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdCem9MWm05eWJXRjBTU0lJYW5CbkJqb0dSVlE2RW5KbGMybDZaVjkwYjE5bWFYUmJCMmtDTUFJdyIsImV4cCI6bnVsbCwicHVyIjoidmFyaWF0aW9uIn19--ccc8d2dd01e46c1ac2520450f0ff6ce8129ddfd9/pexels-stephanie-ho-994174.jpg" /></p>
+
+    <p style="text-align: center !important;">Image Credit: <a href="https://www.pexels.com/photo/adult-tan-and-white-pembroke-welsh-corgi-sits-on-floor-994174/">Stephanie Ho&nbsp;from Pexels</a></p>
+    <ol>
+      <li>If you took the picture yourself, you can write your name under the article like in <a target="_blank" href="https://www.theteenmagazine.com/a-review-of-9-summer-books-from-classics-to-romcoms">this article</a>. Please note that if you falsely claim you took a picture when that was not true, you can be held personally liable for copyright infringement and <i>will be immediately removed from the platform</i>.</li>
+      <li>If you received explicit permission to use the image by the copyright owner, then you can cite below the image, <b>"Courtesy of [copyright owner's name]"</b>.</p>
+    </ol>
+    <li>
+      <b class="text-decoration-underline">Royalty-Free Images</b>: You may use royalty-free images that are licensed for free use or under a Creative Commons (CC) license, provided that you comply with the terms of the license and properly attribute the images. These are the current list of websites that The Teen Magazine has okayed for you to use images from. <span style="background-color: #FCD04D">If you want to use a royalty image from a different website, 
+      please email mia@theteenmagazine.com first to have it added to the list.</span>
+      <ol>
+        <li><a target="_blank" href="https://unsplash.com/">https://www.pexels.com/</a></li>
+        <li><a target="_blank" href="https://unsplash.com/">https://pixabay.com/</a></li>
+        <li><a target="_blank" href="https://unsplash.com/">https://unsplash.com/</a></li>
+        <li><a target="_blank" href="https://commons.wikimedia.org/wiki/Category:Images">https://commons.wikimedia.org/wiki/Category:Images</a></li>
+        <li><a target="_blank" href="https://www.dgepress.com/">https://www.dgepress.com/</a></li>
+        <li><a target="_blank" href="https://www.canva.com/">https://www.canva.com/</a>. You can create your own designs on Canva <i>only with the assets already found on Canva</i>. If you can't find the original source of the asset, you can cite under your image: Created on Canva. 
+        This is so that our editors and Mia know where your design came from.</li>
+        <li><i>
+          If you are an entertainment writer over the age of <b>18</b></i> <u>only</u>, you may apply for a press license through Hulu. Read their terms of use before applying for an account: <a target="_blank" href="https://press.hulu.com/terms/">https://press.hulu.com/terms/</a>.
+        </li>
+      </ol>
+      <div class="alert alert-warning" role="alert">
+        The <i>only</i> exception for finding images from some other source other than the list above applies to <b>media kits intedended for press only</b>. Businesses or artists often have this publically accessible on their site. 
+        If they do not, you must email them for explicit permission to use their image, and cite the image with "Courtesy of [copyright owner's name or business]"
+      </div>
     </li>
     <li>
-      Royalty-Free Images: You may use royalty-free images that are licensed for free use or under a Creative Commons (CC) license, provided that you comply with the terms of the license and properly attribute the images. It is your responsibility to verify the licensing terms of any image you use to ensure that it is free to use for your intended purpose.
+      <b class="text-decoration-underline">Prohibited Images</b>: If the image you found is not from the list above, it is <b>prohibited</b> to use. 
+            <h3>***Pinterest is NOT an ok site to get images from! If you have images on your articles that you have cited from Pinterest, you must remove them.***</h3>
     </li>
     <li>
-      Prohibited Images: You must not use any images that are copyrighted, trademarked, or otherwise protected by intellectual property rights, without obtaining proper authorization from the owner. Please see Which Images Are Not Safe to Use.
-    </li>
-    <li>
-      Liability for Infringement: If you use images in violation of this policy, you may be liable for any resulting copyright infringement or other legal consequences. You are solely responsible for the images you use in your content, and you must indemnify and hold our platform harmless from any claims, damages, or losses resulting from your failure to comply with this policy.
+      <b class="text-decoration-underline">Consequences for not adhering to this policy</b>: <span style="background-color: #FCD04D">If you wrongly accept this policy from the date hereof without adhering to the rules in this image policy, your writer account will be suspended and your article will be unpublished.
+      If you accepted the old image policy before it was updated, you are still responsible for updating your articles, however you have until <b>10/31/23</b> to comply with the new policy.</span> After that, images in your articles may be deleted by editors, and in some cases, your article(s) will be unpublished. You may also be held accountable for any resulting copyright infringement or other legal consequences The Teen Magazine receives as a result of your infringing image(s).
+      You are solely responsible for the images you use in your content, and you must indemnify and hold our platform harmless from any claims, damages, or losses resulting from your failure to comply with this policy.
     </li>
   </ul>
-  <h3><b>How to find images that are safe to use:</b></h3>
-  <ul>
-    <li>
-      Use reputable websites: Look for established websites that offer royalty-free or creative commons images, such as <b>Unsplash, Pixabay, Pexels, or Wikimedia Commons</b>. These websites typically provide images that are free to use for various purposes, including commercial use, without the need for attribution or payment.
-    </li>
-    <li>
-      Use advanced search filters: When using search engines like Google, utilize advanced search filters to narrow down results to images that are labeled for reuse or modification. You can do this by selecting "Tools" > "Usage Rights" and choosing an appropriate option, such as "Labeled for reuse" or "Labeled for noncommercial reuse."
-    </li>
-    <li>
-      Check licenses and terms of use: Read and understand the licenses and terms of use associated with the images you find. Some images may require attribution, have restrictions on usage, or may not be allowed for certain purposes. Make sure to comply with the stated terms of use to avoid copyright infringement.
-    </li>
-    <li>
-      Consider using public domain images: Public domain images are not protected by copyright and can be used freely for any purpose. There are websites that offer collections of public domain images, such as <b>Public Domain Pictures, Public Domain Archive, or the Library of Congress</b>.
-    </li>
-  </ul>
-  <h3><b>Which Images Are Not Safe to Use:</b></h3>
-  <ul>
-    <li>
-      Copyrighted images: Avoid using images that are protected by copyright unless you have obtained proper authorization or a license to use them. Copyrighted images are owned by the creator or owner and are subject to legal protection, which means that unauthorized use can result in copyright infringement.
-    </li>
-    <li>
-      Images without proper attribution or permission: Some images may be labeled as "free to use" but require attribution or permission from the creator or owner. Always check the licensing terms and requirements for proper attribution or permission, and comply with them to avoid any legal issues.
-    </li>
-    <li>
-      Watermarked or copyrighted images: Avoid using images that contain watermarks, logos, or other indications of copyright ownership, unless you have proper authorization or a license to use them. Using such images without permission can result in copyright infringement.
-    </li>
-    <li>
-      Images from unknown or sketchy sources: Be cautious when using images from unknown or unreliable sources, as they may not have proper authorization or may not be legitimate royalty-free sources. Stick to reputable websites and verify the legitimacy and usage rights of the images before using them.
-    </li>
-    <li>
-      Images with recognizable people or trademarks: Avoid using images that contain recognizable people or trademarks without proper authorization, as this may infringe on privacy rights or trademark laws. Be mindful of using images that depict identifiable individuals, brands, logos, or trademarks without proper permission.
-    </li>
-    <li>
-      Embedded images without proper authorization: Embedding images from social media platforms may not always be considered safe in terms of copyright compliance, as the original uploader may not have obtained proper authorization or may have only granted permission for personal, non-commercial use. Always make sure that an embedded image from social media was created by the user and ask the creator for permission, if possible.
-    </li>
-  </ul>
-  <h3><b>Fair Use Policy for Entertainment Articles:</b></h3>
-  <ul>
-    <li>Purpose: This policy outlines the guidelines for the use of copyrighted material under the doctrine of fair use in entertainment articles published on our website.
-    </li>
-    <li>
-      Definition of Fair Use: Fair use is a legal doctrine that allows for the limited use of copyrighted material without obtaining permission from the copyright owner. Fair use applies to certain purposes, such as criticism, commentary, news reporting, teaching, and research, and is subject to a case-by-case analysis based on various factors, including the nature of the copyrighted work, the purpose and character of the use, the amount and substantiality of the portion used, and the effect on the potential market for the copyrighted work.
-    </li>
-    <li>
-      Fair Use in Entertainment Articles: Writers may use copyrighted material, such as images, screenshots, video clips, or other media, in their entertainment articles under the doctrine of fair use when such use is necessary for criticism, commentary, news reporting, or other transformative purposes related to the subject of the article.
-    </li>
-    <p>
-      Guidelines for Fair Use in Entertainment Articles:
-    </p>
-    <li>
-      Use only small portions of the original work: Limit the use of copyrighted material to small portions that are relevant to the article's subject and purpose.
-    </li>
-    <li>
-      Provide attribution: Clearly attribute the copyrighted material to the original source, including the title, author, and/or creator, and, if applicable, the copyright owner.
-    </li>
-    <li>
-      Use original content whenever possible: Whenever possible, use original content created by the writer or content that is in the public domain or properly licensed for use.
-    </li>
-    <li>
-      Avoid using copyrighted material that competes with the original work: Do not use copyrighted material that directly competes with the market for the original work, such as full-length movies, TV episodes, or entire songs.
-    </li>
-    <li>
-      Consider alternative options: Explore alternative options for obtaining proper permissions or licenses from the copyright owner when using copyrighted material that may not clearly fall under fair use.
-    </li>
-    <li>
-      Compliance with Copyright Laws: All writers are responsible for ensuring compliance with applicable copyright laws and this fair use policy. Writers should carefully consider the application of fair use principles and seek legal advice when in doubt.
-    </li>
-    <p>Disclaimers</p>
-    <li>
-      The website and its owners do not assume any liability for the unauthorized use of copyrighted material by writers. Writers are solely responsible for obtaining proper permissions or licenses for any copyrighted material used in their articles and for any legal consequences that may arise from copyright infringement.
-    </li>
-    <li>
-      Regular Policy Review: This fair use policy will be reviewed periodically to ensure compliance with changing copyright laws and best practices for fair use in entertainment articles. Any updates or changes to the policy will be communicated to all writers.
-    </li>
-    <li>
-      It is the responsibility of all writers to adhere to this fair use policy when using copyrighted material in their entertainment articles. By doing so, writers will help ensure compliance with copyright laws and protect the website and its users from potential legal liabilities.
-    </li>
-  </ul>
+  <h3><b>Embedding Social Media Posts</b></h3>
+  <p>
+    The Teen Magazine allows embedding social media posts in your articles. Since you're not uploading a copy of the image or video, 
+    it is legally considered a "link" and therefore is not copyright infringement.
+  </p>
+  <p>
+    This is an ongoing issue however and The Teen Magazine reserves the right to change this policy depending on what the higher courts say. Read more about the issue here:
+    <ul>
+      <li><a target="_blank" href="https://www.sportico.com/law/analysis/2023/embedded-instagram-posts-not-infringement-1234731168/">https://www.sportico.com/law/analysis/2023/embedded-instagram-posts-not-infringement-1234731168/</a></li>
+    </ul>
+  </p>
   <p>
     By using images in your content, you acknowledge and agree to comply with this Image Usage Policy. Failure to follow this policy may result in removal of your content from our platform and may make you liable for any legal consequences arising from copyright infringement or other violations. It is your responsibility to ensure that you have proper rights and permissions for any images used in your content, and to promptly remove any images that are found to be in violation of this policy or applicable copyright laws.
   </p>
+  <p>
+    If you have any questions about the image policy or following the image guidelines, you can post in the <b>Discord chat</b> <a href="https://discord.com/channels/1081601449550688286/1081601450737676474">here</a>.
+  </p>
+  <i>Last updated September 4th, 2023</i>
   <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
     <circle cx="26" cy="26" r="25" fill="none"/>
     <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
