--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -71,6 +71,15 @@
   }
 }
 
+#manage-images {
+  #ckbox,
+  .ckbox,
+  .ckbox-view-wrapper {
+    width: 100%;
+    max-height: 80vh;
+  }
+}
+
 .theimages {
   img {
     width: 70%;
