fixed category and posts promoted bug plus updated privacy policy

--- a/app/views/newsletters/previews/_announcement.html.erb
+++ b/app/views/newsletters/previews/_announcement.html.erb
@@ -101,6 +101,11 @@
             </tr>
             <tr class="bottom_links">
               <td align="center">
+                <span style="font-size:12px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0; padding-left: 4px;">
+                <a style="font-size:12px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;" href='https://theteenmagazine.com/'>
+                  The Teen Magazine, LLC</a> | 5665 W. Wilshire Blvd #1077, Los Angeles, CA 90036
+                </span>
+                <br>
                 <span style="font-size:12px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">
                   Sent to <%= @newsletter.audience %>
                 </span>
