--- a/app/views/posts/get_promoted_posts.js.erb
+++ b/app/views/posts/get_promoted_posts.js.erb
@@ -1,4 +1,4 @@
-$('#promoted-posts').append("<%= j(render 'posts/partials/promoted/promoted_page')%>");
+$('#promoted-posts').append("<%= j(render 'posts/partials/promoted/promoted_page', posts: @posts_promoted )%>");
 <% if @is_last_page %>
   $('#div_next_link_articles').html("");
 <% else %>
