--- a/app/views/posts/partials/promoted/_promoted_page.html.erb
+++ b/app/views/posts/partials/promoted/_promoted_page.html.erb
@@ -1,4 +1,4 @@
-<% @posts_promoted.each_with_index do |post, index| %>
+<% posts.each_with_index do |post, index| %>
   <div class="ctgry_article recent mb-4">
     <%=link_to(post) do %>
       <div class="w-100 position-relative">
